--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -263,110 +263,121 @@
                         businesses need quality, well planned IT systems to prevent downtimes, bottlenecks and
                         continued service delivery. We develop, integrate, manage and support reliable and long
                         term IT Solutions and Systems which limit day to day break downs and expenses.</p>
-                        <img src="css/img/" alt="edgetech">
-                </div>
-                <h1>The Musketeers</h1>
-                <p>We are a close-knit team full of humor, coffee & lunch is served in the ofﬁce (free of
-                    charge!!, Daisy knows this). We pack the punch of the big boys and girls, with service and
-                    attention you only get from a small studio. Our ofﬁces sit in a very serene compound full
-                    of trees and perfectly manicured lawn.</p>
-                <div class="musketeers-cards">
-                    <div class="musketeers-card">
-                        <div class="image">
-                            <img src="" alt="">
+                    <img src="css/img/circles.png" alt="edgetech" class="circles">
+                    <h1 class="thinned">The Musketeers</h1>
+                    <p>We are a close-knit team full of humor, coffee & lunch is served in the ofﬁce (free of
+                        charge!!, Daisy knows this). We pack the punch of the big boys and girls, with service and
+                        attention you only get from a small studio. Our ofﬁces sit in a very serene compound full
+                        of trees and perfectly manicured lawn.</p>
+                    <div class="musketeers-cards">
+                        <div class="musketeers-card">
+                            <div class="image">
+                                <img src="" alt="">
+                            </div>
+                            <div class="musketeer-card-info">
+                                <h3>Maureen Koech</h3>
+                                <span>OPERATIONS</span>
+                                <p>She deals with everyone including
+                                    you...Need a quote? Talk to her.</p>
+                            </div>
                         </div>
-                        <div class="musketeer-card-info">
-                            <h3></h3>
-                            <span></span>
-                            <p></p>
+                        <div class="musketeers-card">
+                            <div class="image">
+                                <img src="" alt="">
+                            </div>
+                            <div class="musketeer-card-info">
+                                <h3>RAYMOND SIGEI</h3>
+                                <span>DEVELOPER</span>
+                                <p>The guy responsible for bringing
+                                    your imaginations to reality and
+                                    taking a lot of coffee..</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="musketeers-card">
-                        <div class="image">
-                            <img src="" alt="">
+                        <div class="musketeers-card">
+                            <div class="image">
+                                <img src="" alt="">
+                            </div>
+                            <div class="musketeer-card-info">
+                                <h3>Derrick Senelewa</h3>
+                                <span>SYSTEMS ENGINEER</span>
+                                <p>The guy responsible for bringing
+                                    your imaginations to reality and
+                                    taking a lot of coffee..</p>
+                            </div>
                         </div>
-                        <div class="musketeer-card-info">
-                            <h3></h3>
-                            <span></span>
-                            <p></p>
+                        <div class="musketeers-card">
+                            <div class="image">
+                                <img src="" alt="">
+                            </div>
+                            <div class="musketeer-card-info">
+                                <h3>Gloria Sulungai</h3>
+                                <span>MARKETING</span>
+                                <p>I guess the sweet language works
+                                    for us all. "She sells sea shells at the
+                                    sea shore."</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="musketeers-card">
-                        <div class="image">
-                            <img src="" alt="">
+                        <div class="musketeers-card">
+                            <div class="image">
+                                <img src="" alt="">
+                            </div>
+                            <div class="musketeer-card-info">
+                                <h3>Philmax Laitoriat</h3>
+                                <span>TECH SUPPORT</span>
+                                <p>Are your Servers, Systems and can't
+                                    send mail story working you? He
+                                    knows what to do.</p>
+                            </div>
                         </div>
-                        <div class="musketeer-card-info">
-                            <h3></h3>
-                            <span></span>
-                            <p></p>
-                        </div>
-                    </div>
-                    <div class="musketeers-card">
-                        <div class="image">
-                            <img src="" alt="">
-                        </div>
-                        <div class="musketeer-card-info">
-                            <h3></h3>
-                            <span></span>
-                            <p></p>
-                        </div>
-                    </div>
-                    <div class="musketeers-card">
-                        <div class="image">
-                            <img src="" alt="">
-                        </div>
-                        <div class="musketeer-card-info">
-                            <h3></h3>
-                            <span></span>
-                            <p></p>
-                        </div>
-                    </div>
-                    <div class="musketeers-card">
-                        <div class="image">
-                            <img src="" alt="">
-                        </div>
-                        <div class="musketeer-card-info">
-                            <h3></h3>
-                            <span></span>
-                            <p></p>
+                        <div class="musketeers-card">
+                            <div class="image">
+                                <img src="" alt="">
+                            </div>
+                            <div class="musketeer-card-info">
+                                <h3>Daisy Murgor</h3>
+                                <span>FINANCE</span>
+                                <p>When you write a Cheque or EFT or
+                                    Cash or run away without paying
+                                    us, then this is the sherif in town.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="partners">
                 <div class="partners-container container">
-                    <h1></h1>
-                    <p></p>
+                    <h1>Our Partners</h1>
+                    <p>We work well incss/img/ a Partedgetechnership Setting, why? Its a Win Win all the time...</p>
                     <div class="partners">
                         <div class="partner">
-                            <img src="" alt="">
+                            <img src="css/img/safaricom.png" alt="edgetech">
                         </div>
                         <div class="partner">
-                            <img src="" alt="">
+                            <img src="css/img/stonewood.png" alt="edgetech">
                         </div>
                         <div class="partner">
-                            <img src="" alt="">
+                            <img src="css/img/drums for africa.png" alt="edgetech">
                         </div>
                         <div class="partner">
-                            <img src="" alt="">
+                            <img src="css/img/techchimp.png" alt="edgetech">
                         </div>
                         <div class="partner">
-                            <img src="" alt="">
+                            <img src="css/img/lesave.png" alt="edgetech">
                         </div>
                         <div class="partner">
-                            <img src="" alt="">
+                            <img src="css/img/environment liason.png" alt="edgetech">
                         </div>
                         <div class="partner">
-                            <img src="" alt="">
+                            <img src="css/img/akasha.png" alt="edgetech">
                         </div>
                         <div class="partner">
-                            <img src="" alt="">
+                            <img src="css/img/fone planet.png" alt="edgetech">
                         </div>
                         <div class="partner">
-                            <img src="" alt="">
+                            <img src="css/img/affa.png" alt="edgetech">
                         </div>
                         <div class="partner">
-                            <img src="" alt="">
+                            <img src="css/img/beyond creative.png" alt="edgetech">
                         </div>
                     </div>
                 </div>
