--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -373,8 +373,7 @@
                         <div class="partner">
                             <img src="css/img/fone planet.png" alt="edgetech">
                         </div>
-                        <div class="partner">
-                            <img src="css/img/affa.png" alt="edgetech">
+                        <div class="partner">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alt="edgetech">
                         </div>
                         <div class="partner">
                             <img src="css/img/beyond creative.png" alt="edgetech">
@@ -388,9 +387,9 @@
         <footer>
             <div class="footer-container container">
                 <div class="top-foot">
-                    <div class="social-media">
+                    <div class="social-media ft">
                         <span>FOLLOW US</span>
-                        <div class="social-icons">
+                        <div class="social-icons ft">
                             <a href="#"><i class="fas fa-twitter"></i></a>
                             <a href="#"><i class="fas fa-twitter"></i></a>
                             <a href="#"><i class="fas fa-twitter"></i></a>
@@ -415,16 +414,37 @@
                         <ul>
                             <li>
                                 <div class="icon"></div>
-                                <div class="text"></div>
+                                <div class="text">5th Floor Kipro Centre,
+                                    Church Road, Westlands</div>
+                            </li>
+                            <li>
+                                <div class="icon"></div>
+                                <div class="text">+254 720 529 868</div>
+                            </li>
+                            <li>
+                                <div class="icon"></div>
+                                <div class="text">operations@edgetech.co.ke</div>
                             </li>
                         </ul>
                     </div>
                     <div class="column two">
-                        <h3>Our Business Ofﬁce</h3>
+                        <h3>Business Hours</h3>
                         <ul>
                             <li>
                                 <div class="icon"></div>
-                                <div class="text"></div>
+                                <div class="text">Weekdays : 9am to 5pm</div>
+                            </li>
+                            <li>
+                                <div class="icon"></div>
+                                <div class="text">Saturday : 9am to 12noon</div>
+                            </li>
+                            <li>
+                                <div class="icon"></div>
+                                <div class="text">Sunday : Closed</div>
+                            </li>
+                            <li>
+                                <div class="icon"></div>
+                                <div class="text">EdgeTechConsult</div>
                             </li>
                         </ul>
                     </div>
