--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -390,15 +390,17 @@
                     <div class="social-media ft">
                         <span>FOLLOW US</span>
                         <div class="social-icons ft">
-                            <a href="#"><i class="fas fa-twitter"></i></a>
-                            <a href="#"><i class="fas fa-twitter"></i></a>
-                            <a href="#"><i class="fas fa-twitter"></i></a>
-                            <a href="#"><i class="fas fa-twitter"></i></a>
+                            <a href="#"><img src="css/img/icons/facebook icon.png" alt="edgetech"></a>
+                            <a href="#"><img src="css/img/icons/instagram icon.png" alt="edgetech"></a>
+                            <a href="#"><img src="css/img/icons/twitter icon.png" alt="edgetech"></a>
+                            <a href="#"><img src="css/img/icons/pinterest icon.png" alt="edgetech"></a>
                         </div>
                     </div>
                     <form class="top-foot-fm" action="">
-                        <div class="icon"></div>
-                        <input type="text">
+                        <div class="icon">
+                            <img src="css/img/icons/message icon.png" alt="edgetech">
+                        </div>
+                        <input type="text" placeholder="Enter email address">
                         <button type="submit">Go</button>
                     </form>
                 </div>
@@ -413,16 +415,22 @@
                         <h3>Our Business Ofﬁce</h3>
                         <ul>
                             <li>
-                                <div class="icon"></div>
+                                <div class="icon">
+                                    <img src="css/img/icons/house icon.png" alt="edgetech">
+                                </div>
                                 <div class="text">5th Floor Kipro Centre,
                                     Church Road, Westlands</div>
                             </li>
                             <li>
-                                <div class="icon"></div>
+                                <div class="icon">
+                                    <img src="css/img/icons/phone icon.png" alt="edgetech">
+                                </div>
                                 <div class="text">+254 720 529 868</div>
                             </li>
                             <li>
-                                <div class="icon"></div>
+                                <div class="icon">
+                                    <img src="css/img/icons/checkbox icon.png" alt="edgetech">
+                                </div>
                                 <div class="text">operations@edgetech.co.ke</div>
                             </li>
                         </ul>
@@ -431,28 +439,38 @@
                         <h3>Business Hours</h3>
                         <ul>
                             <li>
-                                <div class="icon"></div>
+                                <div class="icon">
+                                    <img src="css/img/icons/clock icon.png" alt="edgetech">
+                                </div>
                                 <div class="text">Weekdays : 9am to 5pm</div>
                             </li>
                             <li>
-                                <div class="icon"></div>
+                                <div class="icon">
+                                    <img src="css/img/icons/clock icon.png" alt="edgetech">
+                                </div>
                                 <div class="text">Saturday : 9am to 12noon</div>
                             </li>
                             <li>
-                                <div class="icon"></div>
+                                <div class="icon">
+                                    <img src="css/img/icons/mark icon.png" alt="edgetech">
+                                </div>
                                 <div class="text">Sunday : Closed</div>
                             </li>
                             <li>
-                                <div class="icon"></div>
+                                <div class="icon">
+                                    <img src="css/img/icons/skype icon.png" alt="edgetech">
+                                </div>
                                 <div class="text">EdgeTechConsult</div>
                             </li>
                         </ul>
                     </div>
                     <div class="column three">
                         <form action="">
-                            <input type="text">
-                            <input type="text">
-                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                            <div class="fm-ctrl">
+                                <input type="text" placeholder="Your Name*">
+                                <input type="email" placeholder="Your Email*">
+                            </div>
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message*"></textarea>
                             <button type="submit">SEND</button>
                         </form>
                     </div>
