--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -73,9 +73,7 @@
                         <img src="css/img/person.png" alt="edgetech">
                     </div>
                     <div class="drop-arrow-scroll">
-                        <div class="icon">
-
-                        </div>
+                        <i class="fa-regular fa-chevron-down"></i>
                     </div>
                 </section>
             <!-- == || Banner == -->
@@ -85,6 +83,8 @@
                     <p>It's all about the experience. People love Apps that are fun and simple to use.
                         We make those apps. Our apps are made from scratch using nothing but the
                         best strategy, design and technical ingredients.</p>
+                </div>
+                <div class="our-stry-containertwo container">
                     <img src="css/img/info section.png" alt="edgetech">
                 </div>
             </section>
@@ -263,7 +263,7 @@
                         businesses need quality, well planned IT systems to prevent downtimes, bottlenecks and
                         continued service delivery. We develop, integrate, manage and support reliable and long
                         term IT Solutions and Systems which limit day to day break downs and expenses.</p>
-                    <img src="css/img/circles.png" alt="edgetech" class="circles">
+                    <img src="css/img/circle and lines.png" alt="edgetech" class="circles">
                     <h1 class="thinned">The Musketeers</h1>
                     <p>We are a close-knit team full of humor, coffee & lunch is served in the ofﬁce (free of
                         charge!!, Daisy knows this). We pack the punch of the big boys and girls, with service and
@@ -373,7 +373,8 @@
                         <div class="partner">
                             <img src="css/img/fone planet.png" alt="edgetech">
                         </div>
-                        <div class="partner">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alt="edgetech">
+                        <div class="partner">
+                            <img src="css/img/affa.png" alt="edgetech">
                         </div>
                         <div class="partner">
                             <img src="css/img/beyond creative.png" alt="edgetech">
