--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -471,7 +471,7 @@
                                 <input type="text" placeholder="Your Name*">
                                 <input type="email" placeholder="Your Email*">
                             </div>
-                            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message*"></textarea>
+                            <textarea name="" id="" placeholder="Your Message*"></textarea>
                             <button type="submit">SEND</button>
                         </form>
                     </div>
