--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -52,11 +52,17 @@
                 <div class="logo">
                     <img src="css/img/edgetech logo.png" alt="edgetech logo">
                 </div>
-                <div class="nav-links">
+                <div class="nav-links links" id="links">
+                    <div class="cancel">
+                        <span class="cancel-btn"><i class="fas fa-times"></i></span>
+                    </div>
                     <a href="#">SERVICES</a>
                     <a href="#">OUR STORY</a>
                     <a href="#">PARTNERS</a>
                     <a href="#">CONTACTS</a>
+                </div>
+                <div class="menu-bar">
+                    <span class="menu-btn"><i class="fas fa-bars"></i></span>
                 </div>
             </div>
         </nav>
@@ -347,7 +353,7 @@
             <section class="partners">
                 <div class="partners-container container">
                     <h1>Our Partners</h1>
-                    <p>We work well incss/img/ a Partedgetechnership Setting, why? Its a Win Win all the time...</p>
+                    <p>We work well in a Partnership Setting, why? Its a Win Win all the time...</p>
                     <div class="partners">
                         <div class="partner">
                             <img src="css/img/safaricom.png" alt="edgetech">
