--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -79,7 +79,7 @@
                         <img src="css/img/person.png" alt="edgetech">
                     </div>
                     <div class="drop-arrow-scroll">
-                        <i class="fa-regular fa-chevron-down"></i>
+                        <img src="css/img/icons/arrow down icon.png" alt="edgetech">
                     </div>
                 </section>
             <!-- == || Banner == -->
@@ -432,7 +432,7 @@
                                 <div class="icon">
                                     <img src="css/img/icons/phone icon.png" alt="edgetech">
                                 </div>
-                                <div class="text">+254 720 529 868</div>
+                                <div class="text">+254-700-125555, +254-736-355183</div>
                             </li>
                             <li>
                                 <div class="icon">
@@ -477,7 +477,9 @@
                                 <input type="text" placeholder="Your Name*">
                                 <input type="email" placeholder="Your Email*">
                             </div>
-                            <textarea name="" id="" placeholder="Your Message*"></textarea>
+                            <div class="fm-ctrl">
+                                <textarea name="" id="" placeholder="Your Message*"></textarea>
+                            </div>
                             <button type="submit">SEND</button>
                         </form>
                     </div>
