--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -269,7 +269,7 @@
                         businesses need quality, well planned IT systems to prevent downtimes, bottlenecks and
                         continued service delivery. We develop, integrate, manage and support reliable and long
                         term IT Solutions and Systems which limit day to day break downs and expenses.</p>
-                    <img src="css/img/circle and lines.png" alt="edgetech" class="circles">
+                    <!-- <img src="css/img/circle and lines.png" alt="edgetech" class="circles">
                     <h1 class="thinned">The Musketeers</h1>
                     <p>We are a close-knit team full of humor, coffee & lunch is served in the ofﬁce (free of
                         charge!!, Daisy knows this). We pack the punch of the big boys and girls, with service and
@@ -347,7 +347,7 @@
                                     us, then this is the sherif in town.</p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </section>
             <section class="partners">
