--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -485,7 +485,7 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-copyright container">
+            <div class="footer-copyright ">
                 <div class="ft-logo">
                     <img src="css/img/edgetech footer logo.png" alt="edgetech">
                     <div class="ft-links">
@@ -496,7 +496,7 @@
                     </div>
                 </div>
                 <div class="copy-text">
-                    ©2004-2018 EdgeTech Consult. All rights reserved
+                    ©2023 EdgeTech Consult. All rights reserved
                 </div>
             </div>
         </footer>
