make container cewntered

--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -485,20 +485,23 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-copyright ">
-                <div class="ft-logo">
-                    <img src="css/img/edgetech footer logo.png" alt="edgetech">
-                    <div class="ft-links">
-                        <a href="#">Site Map</a>
-                        <a href="#">Careers</a>
-                        <a href="#">Privacy</a>
-                        <a href="#">Terms of use</a>
+            <div class="container">
+                <div class="footer-copyright">
+                    <div class="ft-logo">
+                        <img src="css/img/edgetech footer logo.png" alt="edgetech">
+                        <div class="ft-links">
+                            <a href="#">Site Map</a>
+                            <a href="#">Careers</a>
+                            <a href="#">Privacy</a>
+                            <a href="#">Terms of use</a>
+                        </div>
+                    </div>
+                    <div class="copy-text">
+                        ©2023 EdgeTech Consult. All rights reserved
                     </div>
                 </div>
-                <div class="copy-text">
-                    ©2023 EdgeTech Consult. All rights reserved
-                </div>
             </div>
+
         </footer>
     <!-- == || Footer == -->
     <!-- == Scripts == -->
