--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -56,10 +56,10 @@
                     <div class="cancel">
                         <span class="cancel-btn"><i class="fas fa-times"></i></span>
                     </div>
-                    <a href="#">SERVICES</a>
-                    <a href="#">OUR STORY</a>
-                    <a href="#">PARTNERS</a>
-                    <a href="#">CONTACTS</a>
+                    <a href="#services">SERVICES</a>
+                    <a href="#story">OUR STORY</a>
+                    <a href="#partners">PARTNERS</a>
+                    <a href="#contact">CONTACTS</a>
                 </div>
                 <div class="menu-bar">
                     <span class="menu-btn"><i class="fas fa-bars"></i></span>
@@ -94,7 +94,7 @@
                     <img src="css/img/info section.png" alt="edgetech">
                 </div>
             </section>
-            <section class="cards">
+            <section class="cards" id="#services">
                 <div class="cards-container container">
                     <div class="card">
                         <img src="css/img/web and mobile.jpg" alt="edgetech">
@@ -254,7 +254,7 @@
                 </div>
             </section>
             <section class="musketeers">
-                <div class="musketeers-container container">
+                <div class="musketeers-container container" id="story">
                     <h1>Our Story</h1>
                     <p>Formed in Kenya in 2004, EdgeTech Consult has gone from strength to strength since
                         opening our Nairobi studio, continuing to deliver premium Mobile Applications and
@@ -350,7 +350,7 @@
                     </div> -->
                 </div>
             </section>
-            <section class="partners">
+            <section class="partners" id="partners">
                 <div class="partners-container container">
                     <h1>Our Partners</h1>
                     <p>We work well in a Partnership Setting, why? Its a Win Win all the time...</p>
@@ -392,7 +392,7 @@
     <!-- == || Main == -->
     <!-- == Footer == -->
         <footer>
-            <div class="footer-container container">
+            <div class="footer-container container" id="contact">
                 <div class="top-foot">
                     <div class="social-media ft">
                         <span>FOLLOW US</span>
