--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -412,7 +412,7 @@
                     </form>
                 </div>
                 <div class="middle-foot">
-                    <h1>Want to her more</h1>
+                    <h1>Want to hear more</h1>
                     <p>We love to chat anytime of the day and "night".
                         Let’s link up to redeﬁne the internet of things, transform the way your business
                         connects with technology and interacts with your customer.</p>
