--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -122,11 +122,11 @@
           <img src="css/img/person.png" alt="edgetech" />
         </div>
         <div class="drop-arrow-scroll">
-          <img src="css/img/icons/arrow down icon.png" alt="edgetech" />
+         <a href="#about"> <img src="css/img/icons/arrow down icon.png" alt="edgetech" /></a>
         </div>
       </section>
       <!-- == || Banner == -->
-      <section class="our-story">
+      <section class="our-story" id="about">
         <div class="our-stry-container container">
           <h1>The future of Tech</h1>
           <p>
@@ -140,7 +140,7 @@
           <img src="css/img/info section.png" alt="edgetech" />
         </div>
       </section>
-      <section class="cards" id="#services">
+      <section class="cards" id="services">
         <div class="cards-container container">
           <div class="card">
             <img src="css/img/web and mobile.jpg" alt="edgetech" />
@@ -458,7 +458,7 @@
     <!-- == Footer == -->
     <footer>
       <div class="footer-container container" id="contact">
-        <div class="top-foot">
+        <!-- <div class="top-foot">
           <div class="social-media ft">
             <span>FOLLOW US</span>
             <div class="social-icons ft">
@@ -483,7 +483,7 @@
             <input type="text" placeholder="Enter email address" />
             <button type="submit">Go</button>
           </form>
-        </div>
+        </div> -->
         <div class="middle-foot">
           <h1>Want to hear more</h1>
           <p>
@@ -547,17 +547,22 @@
               </li>
             </ul>
           </div>
-          <div class="column three">
-            <form action="">
-              <div class="fm-ctrl">
-                <input type="text" placeholder="Your Name*" />
-                <input type="email" placeholder="Your Email*" />
+          <div class="column three space-y-2">
+            <h3>Follow Us</h3>
+            <div class="flex items-center gap-10 social-icons ft">
+                <a href="#"
+                  ><img src="css/img/icons/facebook icon.png" alt="edgetech"
+                /></a>
+                <a href="#"
+                  ><img src="css/img/icons/instagram icon.png" alt="edgetech"
+                /></a>
+                <a href="#"
+                  ><img src="css/img/icons/twitter icon.png" alt="edgetech"
+                /></a>
+                <a href="#"
+                  ><img src="css/img/icons/pinterest icon.png" alt="edgetech"
+                /></a>
               </div>
-              <div class="fm-ctrl">
-                <textarea name="" id="" placeholder="Your Message*"></textarea>
-              </div>
-              <button type="submit">SEND</button>
-            </form>
           </div>
         </div>
       </div>
