--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -187,7 +187,7 @@
       <section class="breath">
         <div class="breath-container container">
           <h1>Our Expertise</h1>
-          <div class="breath-cards grid grid-cols-1 lg:grid-cols-3">
+          <div class="breath-cards grid grid-cols-1 lg:grid-cols-3 lg:gap-28">
             <div class="breath-card">
               <!-- <div class="icon"></div> -->
               <img src="css/img/services/App-monetization-bro.png" alt="service">
